--- a/feature-repositories/src/main/res/values/strings.xml
+++ b/feature-repositories/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <string name="details_dialog_title">Want to see more details?</string>
+    <string name="positive_button">Yes</string>
+    <string name="negative_button">No</string>
 </resources>
